[package]
name = "libtar-sys"
version = "0.1.9"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/libtar-sys"
homepage = "https://github.com/stainless-steel/libtar-sys"
description = "The package facilitates static linking with libtar."
links = "tar"
build = "build.rs"

[dependencies]
libc = "*"
