[package]
name = "tar-sys"
version = "0.2.0"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/tar-sys"
homepage = "https://github.com/stainless-steel/tar-sys"
description = "The package facilitates static linking to libtar."
links = "tar"
build = "build.rs"

[dependencies]
libc = "*"
