[package]
name = "tar-sys"
version = "0.3.0"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides bindings to libtar."
homepage = "https://github.com/stainless-steel/tar-sys"
repository = "https://github.com/stainless-steel/tar-sys"
build = "build.rs"
links = "tar"

[dependencies]
libc = "0.2"
